# The_Andro_Experiment

./: LICENSE  README.md  chal.txt  challenge.yaml
Andro/: build-openssl.sh  settings.gradle.kts
Andro/app/: build.gradle.kts
Andro/app/src/main/: AndroidManifest.xml
Andro/app/src/main/cpp/: CMakeLists.txt  rollcode.cpp
Andro/app/src/main/java/com/example/andro/: MainActivity.java
Andro/app/src/main/res/drawable/: evil_android_foreground.xml
Andro/app/src/main/res/layout/: activity_main.xml
Andro/app/src/main/res/mipmap-anydpi-v26/: evil_android_round.xml
Andro/app/src/main/res/values/: evil_android_background.xml  strings.xml
Andro/gradle/: libs.versions.toml
Andro/gradle/wrapper/: gradle-wrapper.properties
Andro/prefix/arm64-v8a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
Andro/prefix/armeabi-v7a/include/openssl/: configuration.h
Andro/prefix/armeabi-v7a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
Andro/prefix/x86/include/openssl/: configuration.h
Andro/prefix/x86/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
Andro/prefix/x86_64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
challenge/: andro-server.dockerfile  docker-compose.yml
challenge/Server/: flag.txt  main.py
challenge/Server/templates/: index.html
healthcheck/: healthcheck.py
writeup/: pwn.py  simple_pwn.py  solve.js  writeup.md
